[package]
name = "uikit-example"
version = "0.0.0"
authors = ["Steven Sheldon"]

[lib]
name = "uikit_example"
crate-type = ["staticlib"]

[dependencies]
core-graphics = "0.9.1"
objc_id = "0.1"
objc-foundation = "0.1.1"
color-backtrace = { version = "0.2.3", features = ["failure-bt"] }
log = "0.4"
pretty_env_logger = "0.3"


[dependencies.uikit]
path = "../.."

[dependencies.uikit-impl]
path = "../../impl"
